--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.0"
 
     defaultConfig {
-        applicationId "com.example.zeek123"
+        applicationId "com.zeek.zeek123"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
